[package]
name = "NexTask"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "task"
path = "src/main.rs"

[dependencies]
ratatui = "0.28" # TUI framework
crossterm = "0.27" # Terminal handling
chrono = "0.4" # Date/time
serde = { version = "1.0", features = ["derive"] } # Serialization
serde_json = "1.0" # JSON storage
clap = { version = "4.5", features = ["derive"] } # CLI parsing
notify-rust = "4.11" # Notifications
task_scheduler = "0.3" # System scheduler (placeholder, may need platform-specific handling)
anyhow = "1.0" # Error handling